--- a/src/pw-splitter/Cargo.toml
+++ b/src/pw-splitter/Cargo.toml
@@ -23,7 +23,7 @@ serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
 
 # CLI
-clap = { version = "4.5", features = ["derive"] }
+argh = "0.1"
 
 # Error handling
 anyhow = "1.0"
