--- a/src/pw-splitter/Cargo.toml
+++ b/src/pw-splitter/Cargo.toml
@@ -15,15 +15,15 @@ path = "src/main.rs"
 
 [dependencies]
 # TUI
-ratatui = "0.30.0-beta.1"
-crossterm = "0.29"
+ratatui = { version = "0.30.0-beta.1", default-features = false, features = ["crossterm"] }
+crossterm = { version = "0.29", default-features = false, features = ["events"] }
 
 # Serialization
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
 
 # CLI
-argh = "0.1"
+pico-args = "0.5"
 
 # Error handling
 anyhow = "1.0"
